[package]
name = "charms-verify-parser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "charms-verify-parser"
path = "main.rs"

[dependencies]
anyhow = "1.0"
rustacuda = "0.1.3"
axum = "0.8.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = "0.3"
tracing = "0.1"
clap = { version = "4.5", features = ["derive"] }
tower = "0.5"
charms-client = { version = "0.9.2" }